@@ -44,6 +44,7 @@ import stroom.util.filter.FilterFieldMapper;
 import stroom.util.filter.FilterFieldMappers;
 import stroom.util.filter.QuickFilterPredicateFactory;
 import stroom.util.shared.Clearable;
+import stroom.util.shared.PageRequest;
 import stroom.util.shared.PermissionException;
 import stroom.util.shared.ResultPage;
 
@@ -232,6 +233,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                     .iconClassName(DocumentType.DOC_IMAGE_CLASS_NAME + favDocRef.getType())
                     .isFavourite(true)
                     .rootNodeUuid(favNode)
+                    .tags(ExplorerTags.getTags(favDocRef.getType()))
                     .build();
             masterTreeModel.add(favNode, childNode);
         }
@@ -243,7 +245,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                                             final List<ExplorerNode> rootNodes,
                                             final Predicate<DocRef> fuzzyMatchPredicate) {
         if (rootNodes.size() > 0) {
-            final ExplorerNode rootNode = rootNodes.get(0);
+            final ExplorerNode rootNode = rootNodes.get(rootNodes.size() - 1);
             return rootNodes
                     .stream()
                     .map(node -> {
@@ -285,28 +287,47 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                 final List<DocRef> additionalDocRefs = explorerDecorator.list()
                         .stream()
                         .filter(fuzzyMatchPredicate)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 if (!additionalDocRefs.isEmpty()) {
                     if (rootNode == null) {
                         throw new RuntimeException("Missing root node");
                     }
-
-                    additionalDocRefs.forEach(docRef -> {
-                        final ExplorerNode node = ExplorerNode
-                                .builder()
-                                .docRef(docRef)
-                                .tags(StandardTagNames.DATA_SOURCE)
-                                .nodeState(NodeState.LEAF)
-                                .depth(1)
-                                .iconClassName(DocumentType.DOC_IMAGE_CLASS_NAME + "searchable")
-                                .build();
-                        builder.addChild(node);
-                    });
+                    additionalDocRefs.forEach(docRef -> builder.addChild(createSearchableNode(docRef)));
                 }
             }
         }
         return builder.build();
+    }
+
+    @Override
+    public Optional<ExplorerNode> getFromDocRef(final DocRef docRef) {
+        final Optional<ExplorerNode> optional = explorerNodeService.getNodeWithRoot(docRef);
+        if (optional.isPresent()) {
+            return optional;
+        }
+
+        final ExplorerDecorator explorerDecorator = explorerDecoratorProvider.get();
+        if (explorerDecorator == null) {
+            return Optional.empty();
+        }
+
+        return explorerDecorator.list()
+                .stream()
+                .filter(ref -> Objects.equals(docRef, ref))
+                .findAny()
+                .map(this::createSearchableNode);
+    }
+
+    private ExplorerNode createSearchableNode(final DocRef docRef) {
+        return ExplorerNode
+                .builder()
+                .docRef(docRef)
+                .tags(StandardTagNames.DATA_SOURCE)
+                .nodeState(NodeState.LEAF)
+                .depth(1)
+                .iconClassName(DocumentType.DOC_IMAGE_CLASS_NAME + "searchable")
+                .build();
     }
 
     @Override
@@ -1033,7 +1054,6 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                     .findByContent(request.getPattern(), request.isRegex(), request.isMatchCase());
 
             for (final DocContentMatch docContentMatch : matches) {
-
                 final List<String> parents = new ArrayList<>();
                 parents.add(docContentMatch.getDocRef().getName());
                 final TreeModel masterTreeModel = explorerTreeModel.getModel();
@@ -1064,6 +1084,11 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                 list.add(explorerDocContentMatch);
             }
         }
-        return ResultPage.createPageLimitedList(list, request.getPageRequest());
+
+        PageRequest pageRequest = request.getPageRequest();
+        if (list.size() < pageRequest.getOffset()) {
+            return ResultPage.createUnboundedList(Collections.emptyList());
+        }
+        return ResultPage.createPageLimitedList(list, pageRequest);
     }
 }
